# HyperCyber

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: config.rs  database.rs  entities_orm.rs  main.rs  middleware.rs
backend/src/auth/: handlers.rs  jwt.rs  mod.rs  models.rs  oidc.rs
backend/src/entities/: handlers.rs  models.rs
backend/src/entities/catalogue/: handlers.rs  mod.rs  models.rs  storage.rs
backend/src/entities/rgpd/: handlers.rs  models.rs
backend/src/rgpd/: handlers.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  catalogue.ts  client.ts  entities.ts  rgpd.ts
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: Catalogue.css  Catalogue.tsx  Dashboard.css  Dashboard.tsx  Entities.css  Entities.tsx  Login.css  Login.tsx  RGPDBreaches.css  RGPDBreaches.tsx  RGPDRegister.css  RGPDRegister.tsx  RGPDRequests.css  RGPDRequests.tsx
