[package]
name = "hypercyber-backend"
version = "0.0.1"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"
futures = "0.3"
sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-postgres", "with-chrono", "with-uuid"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
urlencoding = "2.1"

